# Transformer-Scratch

./: .gitignore  README.md  pyproject.toml
src/: config.py  dataset.py  model.py
src/modeling/: train.py
