[project]
name = "Transformer-Scratch"
version = "0.1.0"
description = "coding a transformer from scratch"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.2",
    "numpy>=2.4.0",
    "python-dotenv>=1.1.1",
    "tokenizers>=0.22.1",
    "torch>=2.9.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.0",
]
